cmake_minimum_required(VERSION 3.16)
project(libkeyfinder-core CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_library(FFTW3_LIB fftw3 PATHS /lib /lib64)
find_path(FFTW3_INCLUDE fftw3.h PATHS /include)
if(NOT FFTW3_LIB)
  message(FATAL_ERROR "FFTW3 not found at ")
endif()
message(STATUS "FFTW3:  / ")

file(GLOB KF_SRC libkeyfinder/src/*.cpp src/keyfinder_wrapper.cpp)
add_library(libkeyfinder-core STATIC )
target_include_directories(libkeyfinder-core PUBLIC libkeyfinder/src src )
target_link_libraries(libkeyfinder-core PUBLIC )
target_compile_options(libkeyfinder-core PRIVATE -Wno-psabi -Wno-deprecated)
